k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: r16a-chat-web
  namespace: r16a-chat
  labels:
    app: r16a-chat-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: r16a-chat-web
  template:
    metadata:
      labels:
        app: r16a-chat-web
    spec:
      imagePullSecrets:
        - name: registry-r16a-chat-web
      containers:
        - name: r16a-chat-web
          image: registry.r16a.cloud/r16a-chat-web:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
