k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: r16a-chat-web-https-redirect
  namespace: r16a-chat
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: r16a-chat-web
  namespace: r16a-chat
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
    traefik.ingress.kubernetes.io/router.middlewares: r16a-chat-r16a-chat-web-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - zmey.chat
      secretName: r16a-chat-web-tls
  rules:
    - host: zmey.chat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: r16a-chat-web
                port:
                  number: 80
